--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 
 .container{
     width: 1140px;
+    margin: 0 auto;
 }
 
 ul, ol{
@@ -16,6 +17,9 @@ a{
     display: inline-block;
 }
 
+body{
+    font-family: 'Roboto', sans-serif;
+}
 
 @font-face {
     font-family: 'Roboto';
@@ -147,4 +151,43 @@ a{
         url('Roboto-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
+}
+
+
+.nav{
+    padding: 22px 0;
+}
+
+.nav .container{
+    display: flex;
+    align-items: center;
+}
+
+.logo-nav{
+    display: flex;
+    align-items: flex-start;
+}
+
+.logo-nav-right{
+    margin-left: 8px;
+}
+
+.logo-nav-h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 28px;
+    line-height: 33px;
+    color: #000000;
+}
+
+.logo-nav-sub{
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: #000000;
+}
+
+.nav-search select, .nav-search input, .nav-search button{
+    border: none;
 }
